# libkolibre-amis

./: Makefile.am  README  README.md  configure.ac  doxygen.cfg  doxygen.cfg.in  libkolibre-amis.pc.in
src/: Makefile.am
src/AmisCommon/: AmisCommon.doxy  AmisCommon.h  AmisError.cpp  AmisError.h  Bookmarks.cpp  Bookmarks.h  BookmarksReader.cpp  BookmarksReader.h  BookmarksWriter.cpp  BookmarksWriter.h  CustomTest.cpp  CustomTest.h  FilePathTools.cpp  FilePathTools.h  FileSearch.cpp  FileSearch.h  Makefile.am  Media.cpp  Media.h  Metadata.cpp  Metadata.h  MetadataSet.cpp  MetadataSet.h  OpfItemExtract.cpp  OpfItemExtract.h  SmilAudioExtract.cpp  SmilAudioExtract.h  TitleAuthorParse.cpp  TitleAuthorParse.h  md5.cpp  md5.h  newBookList.txt  trim.h
src/DaisyHandler/: AmisConstants.h  DaisyHandler.cpp  DaisyHandler.h  HistoryRecorder.cpp  HistoryRecorder.h  Makefile.am
src/NavParse/: Makefile.am  NavContainer.cpp  NavContainer.h  NavFileReader.cpp  NavFileReader.h  NavList.cpp  NavList.h  NavMap.cpp  NavMap.h  NavModel.cpp  NavModel.h  NavNode.cpp  NavNode.h  NavParse.cpp  NavParse.h  NavPoint.cpp  NavPoint.h  NavTarget.cpp  NavTarget.h  NccFileReader.cpp  NccFileReader.h  NcxFileReader.cpp  NcxFileReader.h  PageList.cpp  PageList.h  PageTarget.cpp  PageTarget.h  SmilAudioRetrieve.cpp  SmilAudioRetrieve.h
src/SmilEngine/: BinarySmilSearch.cpp  BinarySmilSearch.h  ContentNode.cpp  ContentNode.h  Makefile.am  Node.cpp  Node.h  NodeBuilder.cpp  NodeBuilder.h  ParNode.cpp  ParNode.h  SeqNode.cpp  SeqNode.h  SmilEngine.cpp  SmilEngine.h  SmilEngineConstants.h  SmilMediaGroup.cpp  SmilMediaGroup.h  SmilTree.cpp  SmilTree.h  SmilTreeBuilder.cpp  SmilTreeBuilder.h  Spine.cpp  Spine.h  SpineBuilder.cpp  SpineBuilder.h  TimeContainerNode.cpp  TimeContainerNode.h  doxygen.css  todo.html
tests/: BinSmilSearch.cpp  Bookmarks.cpp  JumpPageTest.cpp  Makefile.am  NavPointTest.cpp  PlayTitle.cpp  binsmilsearch.sh  jumppagetest.sh  md5test.cpp  navpointtest.sh  playtitle.sh  setup_logging.h
tests/DaisyTest/: DaisyTest.cpp  DaisyTest.h  Makefile.am  daisytest.sh
tests/HandlerTest/: FakePlayer.cpp  HanderTest.cpp  HandlerTest.cpp  HandlerTestUnit.cpp  Input.cpp  Input.h  Makefile.am  handlertest.sh  handlertestunit.sh
tests/JumpTest/: FakePlayer.cpp  FakePlayer.h  JumpTest.cpp  Makefile.am  jumptest.sh
tests/data/1Brochure-DAISY-Consortium/: d202_1.smil  d202_10.smil  d202_11.smil  d202_12.smil  d202_13.smil  d202_14.smil  d202_15.smil  d202_16.smil  d202_17.smil  d202_18.smil  d202_19.smil  d202_2.smil  d202_20.smil  d202_21.smil  d202_22.smil  d202_3.smil  d202_4.smil  d202_5.smil  d202_6.smil  d202_7.smil  d202_8.smil  d202_9.smil  daisybrochureforstickv3.html  er_book_info.xml  master.smil  ncc.html
tests/data/Chimpanzees_DAISY_3.0/: Chimpanzees.idx  Chimpanzees.ncx  Chimpanzees.opf  Chimpanzees.smil  Chimpanzees.xml  resources.res
tests/data/Theory_behind_players_kate/: 5.css  content.html  dtb_0001.smil  dtb_0002.smil  dtb_0003.smil  dtb_0004.smil  dtb_0005.smil  dtb_0006.smil  dtb_0007.smil  dtb_0008.smil  dtb_0009.smil  dtb_0010.smil  dtb_0011.smil  dtb_0012.smil  dtb_0013.smil  master.smil
tests/data/VBL20120911/: dtbook.xml  dtbook2xhtml.xsl  speechgen.ncx  speechgen.opf  speechgen0001.smil  speechgen0002.smil  speechgen0003.smil  speechgen0004.smil  speechgen0005.smil  speechgen0006.smil  speechgen0007.smil  speechgen0008.smil  speechgen0009.smil  speechgen0010.smil  speechgen0011.smil  speechgen0012.smil  speechgen0013.smil  speechgen0014.smil  speechgen0015.smil  speechgen0016.smil  speechgen0017.smil  speechgen0018.smil  speechgen0019.smil  speechgen0020.smil  speechgen0021.smil  speechgen0022.smil  speechgen0023.smil  speechgen0024.smil  speechgen0025.smil  speechgen0026.smil  speechgen0027.smil  speechgen0028.smil  speechgen0029.smil  speechgen0030.smil  speechgen0031.smil  speechgen0032.smil  speechgen0033.smil  speechgen0034.smil  speechgen0035.smil  speechgen0036.smil  (+87 more)
